--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
     sdk: flutter
   firebase_core: ^3.6.0
   firebase_auth: ^5.3.1
-  # google_sign_in: ^6.1.5
+  google_sign_in: ^6.3.0
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
