--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   firebase_auth: ^5.3.1
   google_sign_in: ^6.3.0
   cupertino_icons: ^1.0.2
+  cloud_firestore: ^5.6.12
+  path_provider: ^2.1.1
 
 dev_dependencies:
   flutter_test:
