--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   dio: ^5.4.2+1
   path: ^1.9.0
   permission_handler: ^11.3.1
+  record: ^6.1.1
+  audioplayers: ^6.0.0
 
 dev_dependencies:
   flutter_test:
