--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: arti
-description: "A new Flutter project."
+description: "AI-Powered Global Artisan Platform - Transforming local craftsmanship into worldwide success through revolutionary technology."
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 version: 1.0.0+1
@@ -10,50 +10,200 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  
+  # Firebase & Google Cloud Services
   firebase_core: ^3.6.0
   firebase_auth: ^5.3.1
-  google_sign_in: ^6.3.0
-  cupertino_icons: ^1.0.2
   cloud_firestore: ^5.6.12
-  path_provider: ^2.1.1
+  firebase_storage: ^12.0.0
+  firebase_analytics: ^11.3.3
+  firebase_crashlytics: ^4.1.3
+  firebase_performance: ^0.10.0+8
+  firebase_remote_config: ^5.1.3
+  firebase_messaging: ^15.1.3
+  google_sign_in: ^6.3.0
   google_fonts: ^6.1.0
-  form_validator: ^2.1.1
+  google_generative_ai: ^0.4.7
+  google_maps_flutter: ^2.6.1
+  
+  # UI & Design
+  cupertino_icons: ^1.0.2
   flutter_localizations:
     sdk: flutter
   intl: any
+  material_design_icons_flutter: ^7.0.7296
+  animated_text_kit: ^4.2.2
+  lottie: ^3.1.2
+  shimmer: ^3.0.0
+  flutter_staggered_grid_view: ^0.7.0
+  flutter_staggered_animations: ^1.1.1
+  
+  # State Management & Architecture
   provider: ^6.1.2
+  riverpod: ^2.5.1
+  flutter_riverpod: ^2.5.1
+  get_it: ^7.7.0
+  injectable: ^2.4.4
+  
+  # Data & Storage
   shared_preferences: ^2.2.2
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  sqflite: ^2.3.3+1
+  path_provider: ^2.1.1
+  path: ^1.9.0
+  
+  # Networking & APIs
   http: ^1.2.1
-  geolocator: ^11.0.0
-  latlong2: ^0.9.1
-  google_maps_flutter: ^2.6.1
-  speech_to_text: ^7.0.0
-  flutter_tts: ^4.0.2
-  google_generative_ai: ^0.4.7
-  fl_chart: ^0.67.0
+  dio: ^5.4.2+1
+  retrofit: ^4.4.1
+  json_annotation: ^4.9.0
+  connectivity_plus: ^6.0.5
+  
+  # Media & Content
   image_picker: ^1.0.7
-  firebase_storage: ^12.0.0
   cached_network_image: ^3.3.1
   video_player: ^2.9.1
+  camera: ^0.11.0+2
+  photo_view: ^0.15.0
+  image_cropper: ^8.0.2
+  flutter_image_compress: ^2.3.0
+  
+  # Audio & Speech
+  speech_to_text: ^7.0.0
+  flutter_tts: ^4.0.2
+  record: ^6.1.1
+  audioplayers: ^6.0.0
+  audio_waveforms: ^1.1.0
+  
+  # Charts & Visualizations
+  fl_chart: ^0.67.0
+  syncfusion_flutter_charts: ^26.2.14
+  percent_indicator: ^4.2.3
+  
+  # Maps & Location
+  geolocator: ^11.0.0
+  latlong2: ^0.9.1
+  geocoding: ^3.0.0
+  location: ^7.0.0
+  
+  # Utilities & Tools
+  form_validator: ^2.1.1
   url_launcher: ^6.2.5
   qr_flutter: ^4.1.0
   mobile_scanner: ^5.1.0
-  web3dart: ^2.7.2
-  dio: ^5.4.2+1
-  path: ^1.9.0
   permission_handler: ^11.3.1
-  record: ^6.1.1
-  audioplayers: ^6.0.0
+  device_info_plus: ^10.1.2
+  package_info_plus: ^8.0.2
+  share_plus: ^10.0.2
+  
+  # AI & ML
+  tflite_flutter: ^0.11.0
+  google_ml_kit: ^0.18.0
+  
+  # Blockchain & Crypto
+  web3dart: ^2.7.2
+  crypto: ^3.0.5
+  
+  # Date & Time
+  timeago: ^3.7.0
+  jiffy: ^6.3.1
+  
+  # Validation & Security
+  validators: ^3.0.0
+  encrypt: ^5.0.3
+  
+  # Platform Integration
+  flutter_local_notifications: ^17.2.3
+  app_links: ^6.3.2
+  
+  # Development & Debugging
+  logger: ^2.4.0
+  pretty_dio_logger: ^1.4.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_lints: ^4.0.0
+  
+  # Code Generation
+  build_runner: ^2.4.13
+  json_serializable: ^6.8.0
+  injectable_generator: ^2.6.2
+  hive_generator: ^2.0.1
+  retrofit_generator: ^8.2.1
+  
+  # Testing
+  mockito: ^5.4.4
+  bloc_test: ^9.1.7
+  integration_test:
+    sdk: flutter
+  
+  # Development Tools
+  flutter_launcher_icons: ^0.14.1
+  flutter_native_splash: ^2.4.1
+  import_sorter: ^4.6.0
 
-  flutter_lints: ^2.0.0
-
+# Flutter configuration
 flutter:
-
   uses-material-design: true
+  generate: true
 
+  # Assets
   assets:
-    - assets/images/artisan-1.jpg
+    - assets/images/
+    - assets/icons/
+    - assets/animations/
+    - assets/sounds/
+    - assets/data/
+    - assets/ml_models/
+
+  # Fonts
+  # fonts:
+  #   - family: Arti
+  #     fonts:
+  #       - asset: assets/fonts/Arti-Regular.ttf
+  #       - asset: assets/fonts/Arti-Bold.ttf
+  #         weight: 700
+  #       - asset: assets/fonts/Arti-Light.ttf
+  #         weight: 300
+
+# Flutter launcher icons configuration (commented out - missing assets)
+# flutter_launcher_icons:
+#   android: "launcher_icon"
+#   ios: true
+#   image_path: "assets/icons/app_icon.png"
+#   min_sdk_android: 21
+#   web:
+#     generate: true
+#     image_path: "assets/icons/app_icon.png"
+#     background_color: "#2C1810"
+#     theme_color: "#D4AF37"
+#   windows:
+#     generate: true
+#     image_path: "assets/icons/app_icon.png"
+#     icon_size: 48
+#   macos:
+#     generate: true
+#     image_path: "assets/icons/app_icon.png"
+
+# Flutter native splash configuration (commented out - missing assets)
+# flutter_native_splash:
+#   color: "#2C1810"
+#   image: assets/images/splash_logo.png
+#   branding: assets/images/arti_branding.png
+#   color_dark: "#1A1A1A"
+#   image_dark: assets/images/splash_logo_dark.png
+#   branding_dark: assets/images/arti_branding_dark.png
+#   android_12:
+#     image: assets/images/splash_logo_android12.png
+#     icon_background_color: "#2C1810"
+#     image_dark: assets/images/splash_logo_android12_dark.png
+#     icon_background_color_dark: "#1A1A1A"
+#   web: false
+
+# Import sorter configuration
+import_sorter:
+  comments: false
+  ignored_files:
+    - \/lib\/generated\/.*\.dart$
