FEAT: Revolutionary AI Image Generation & Emotional Storytelling System
 Core Features Implemented:
 Dual-model Gemini AI architecture (gemini-2.0-flash-exp + gemini-2.5-flash-image-preview)
 Chapter-based realistic AI image generation for Living Workshops
 Enhanced emotional storytelling with deep customer connection
 Sophisticated multimodal content analysis (video, audio, image)
 Firebase-integrated workshop storage with AI-generated content

 AI Innovation:
 generateEmotionalAIImages() method with chapter-specific prompts
 Advanced prompt engineering for realistic photography-quality descriptions
 Model specialization: text generation vs image analysis optimization
 Fallback system with themed AI image placeholders

 Living Workshop Experience:
 Beautiful text-based emotional storytelling interface
 Chapter progression with mood-based color schemes
 AI image preview system for upcoming chapters
 Interactive hotspot simulation with touch engagement
 Completion flow with emotional connection focus

 Technical Infrastructure:
 Enhanced Gemini service with dual model initialization
 Comprehensive error handling and fallback systems
 Firebase rules deployment for living_workshops collection
 GCP service integration for advanced media analysis
 Artisan media upload pipeline with AI processing

 User Experience:
 Emotionally connecting prompts replacing generic content
 Realistic AI-generated images for each story chapter
 Seamless navigation between workshop chapters
 Professional photography-style AI image generation
 Deep emotional themes extraction and visualization

This implementation creates the most advanced AI-driven artisan workshop experience with realistic image generation and emotional storytelling that connects deeply with customers.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   permission_handler: ^11.3.1
   record: ^6.1.1
   audioplayers: ^6.0.0
+  googleapis_auth: ^1.6.0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -57,3 +59,5 @@ flutter:
 
   assets:
     - assets/images/artisan-1.jpg
+    - assets/gcp-service-key.json
+    - credentials.json
