--- a/.firebaserc
+++ b/.firebaserc
@@ -1,7 +1,6 @@
 {
   "projects": {
-    "default": "garti-sans",
-    "firebase use default": "garti-sans"
+    "default": "garti-sans"
   },
   "targets": {},
   "etags": {}
