--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -22,6 +22,14 @@ linter:
   # producing the lint.
 
 analyzer:
+  errors:
+    use_build_context_synchronously: ignore
+    avoid_print: ignore
+    library_private_types_in_public_api: ignore
+    unused_element: ignore
+    deprecated_member_use: ignore
+    avoid_types_as_parameter_names: ignore
+    unused_field: ignore
   exclude:
     - android/**
     - ios/**
