--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
     sdk: flutter
   firebase_core: ^3.6.0
   firebase_auth: ^5.3.1
+  firebase_messaging: ^15.1.3
+  flutter_local_notifications: ^17.2.3
   google_sign_in: ^6.3.0
   cupertino_icons: ^1.0.2
   cloud_firestore: ^5.6.12
