--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
   flutter_local_notifications: ^17.2.3
   google_sign_in: ^6.3.0
   cupertino_icons: ^1.0.2
-  cloud_firestore: ^5.6.12
+  cloud_firestore: ^5.6.10  # Downgraded for compatibility with firebase_ai
   path_provider: ^2.1.1
   google_fonts: ^6.1.0
   form_validator: ^2.1.1
@@ -32,6 +32,8 @@ dependencies:
   speech_to_text: ^7.0.0
   flutter_tts: ^4.0.2
   google_generative_ai: ^0.4.7
+  firebase_ai: ^2.2.0  # Updated to latest compatible version
+  # firebase_vertexai: 1.8.3  # Deprecated - replaced by firebase_ai
   
   image_picker: ^1.0.4
   firebase_storage: ^12.0.0
