--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,9 +48,11 @@ dependencies:
   path: ^1.9.0
   permission_handler: ^11.3.1
   record: ^6.1.1
+  gal: ^2.3.2
   audioplayers: ^6.0.0
   googleapis_auth: ^1.6.0
   file_picker: ^10.3.3
+  image: ^4.1.7  # Added for image processing in Gemini services
   
 dev_dependencies:
   flutter_test:
