--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -26,7 +26,7 @@ android {
     defaultConfig {
         applicationId = "com.local.artsisans"
         // record_android plugin requires minSdk >= 23
-        minSdkVersion 23
+        minSdk = 23
         targetSdk = 35
         versionCode = flutter.versionCode
         versionName = flutter.versionName
