--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,5 @@
     "JAVA_HOME": "C:\\Program Files\\Java\\jdk-17",
     "PATH": "C:\\Program Files\\Java\\jdk-17\\bin;${env:PATH}"
   },
-  "dart.flutterSdkPath": ".fvm/versions/3.29.0"
+  // "dart.flutterSdkPath": ".fvm/versions/3.29.0"
 }
